# icfpc2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  communicate.py  pyproject.toml
.github/workflows/: backend_deploy.yml  frontend_deploy.yml
backend_py/: .env  .env.development  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend_py/db_migrations/: env.py
backend_py/db_migrations/versions/: 09fbd809b8a2_.py  4dd46eebd83c_.py  5bd8e1feeed0_.py  6d5d5c816951_.py  9f50696e400c_.py  d8bb476ea5ce_.py
backend_py/scripts/: data_migrate.py  dev-server  psql
backend_py/src/backend_py/: api.py  communicate.py  config.py  db.py  deps.py  models.py  problems  tasks.py
backend_rs/: Cargo.toml  pyproject.toml
backend_rs/src/: lib.rs
chir/: 3d2-generator.py
chir/generator/: Cargo.toml
chir/interpreter/: Cargo.toml  arith-test.txt  chain-move-test.txt  comp-test.txt  error-case.txt  illegal_warp.txt  label-not-found.txt  label-test.txt  label-value-input.txt  label-with-value.txt  long-label-test.txt  move-conflict-test.txt  move-test.txt  not-used-label.txt  sample-3d.txt  test.txt  test2.txt  warp-test.txt
chun/misc/: sdecode.py
chun/spaceship_analytical/: Cargo.toml
chun/spaceship_lasolver/: Cargo.toml
chun/spaceship_order/: Cargo.toml
chun/spaceship_trivialsolver/: Cargo.toml
common/: Cargo.toml
common/src/: base94.rs  cps.rs  eval.rs  expr.rs  lib.rs  optimize.rs  planar.rs
communicate/: Cargo.toml
communicate/src/: expr.rs  main.rs  tanakh_copipe.rs
frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
frontend/app/: Communication.tsx  Sidebar.tsx  (+4 more)
fuqinho/: main.cc
lm/: Cargo.toml
oka/: 10.scm  19.scm  20.scm  4.scm  6.scm  7.scm  8.scm  8.scm.comp.scm  8.scm.icfp  8_solve.scm  9.scm  Cargo.toml  lambdaman_score_memo.txt  lm.sh  random_demo.scm
printer/: Cargo.toml
production/: README.md  backend_py.service  celery.service  id_ed25519_icfpc2024_gha.pub  nginx-sites.conf
psh/: itos.py
scmcomp/: Cargo.toml
solutions/: 12-9980.txt  15-9954.txt
(+228 files in other folders)
