[workspace]
resolver = "2"
members = [
  "backend_rs",
  "common",
  "communicate",
  "printer",
  "sandbox/hello",
  "sandbox/lifegame-wasm",
  "sandbox/lifegame",
  "tanakh/evaluator",
  "chun/spaceship_order",
  "tanakh/spaceship", "tanakh/solver", "scmcomp",
  "chun/spaceship_lasolver",
  "chir/interpreter",
]
