[workspace]
resolver = "2"
members = [
  "backend_rs",
  "chir/interpreter",
  "chun/spaceship_lasolver",
  "chun/spaceship_order",
  "common",
  "communicate",
  "nya/compressor",
  "printer",
  "sandbox/hello",
  "sandbox/lifegame-wasm",
  "sandbox/lifegame",
  "scmcomp",
  "tanakh/evaluator",
  "tanakh/solver",
  "tanakh/spaceship", "chun/spaceship_trivialsolver",
]
